--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,30 +1,37 @@
 body {
     font-family: 'Courier New', monospace;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 2%;
+    background-color: rgba(180, 180, 180, 1);
 }
 
-table {
+#header {
+    position: fixed;
+    top: 0%;
+    left: 0%;
     width: 100%;
-}
-
-.thumbnail {
-    height: 250px;
-    width: 175px;
-}
-
-.cover {
-    height: 250px;
-    width: 175px;
-}
-
-.description {
-    padding: 25px;
-    vertical-align: top;
+    height: 5em;
+    background-color: rgba(120, 120, 120, 1);
+    z-index: 100;
+    overflow: hidden;
 }
 
 #search {
+    position: absolute;
+    transform: translate(0%, 50%);
+    background-color: rgba(80, 80, 80, 1);
+    border: none;
+    padding: 1em;
+    border-radius: 1em;
+    left: 10%;
     width: 50%;
-    height: 15px;
+    height: 50%;
 }
+
+#logo {
+    position: absolute;
+    height: 180%;
+    left: 90%;
+}
+
+
+
+
