--- a/css/reader.css
+++ b/css/reader.css
@@ -1,7 +1,3 @@
-body {
-     font-family: 'Courier New', monospace;
-}
-
 #titlebarContainer {
     z-index: 99;
     position: absolute;
@@ -14,9 +10,9 @@ body {
     text-align: center;
     border-radius: 4px;
     position: relative;
-    border: 1px solid rgba(0, 0, 0, 0.2);
+    border: 1px solid var(--dark-grey);
     transform: translate(-50%, -50%);
-    background-color: rgba(256, 256, 256, 1);
+    background-color: var(--medium-grey);
     left: 50%;
     width: 80%;
     height: 40px;
@@ -30,7 +26,7 @@ body {
 }
 
 .titlebarButton {
-    background-color: rgba(0, 0, 0, 0);
+    background-color: var(--transparent);
     float: right;
     border: none;
     height: 40px;
