--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Courier New', monospace;
-    background-color: rgba(180, 180, 180, 1);
+    --dark-grey: rgba(80, 80, 80, 1);
+    --medium-grey: rgba(120, 120, 120, 1);
+    --light-grey: rgba(180, 180, 180, 1);
+    --transparent: rgba(0, 0, 0, 0);
+    background-color: var(--light-grey);
 }
 
 #header {
@@ -9,7 +13,7 @@ body {
     left: 0%;
     width: 100%;
     height: 5em;
-    background-color: rgba(120, 120, 120, 1);
+    background-color: var(--medium-grey);
     z-index: 100;
     overflow: hidden;
 }
@@ -17,7 +21,7 @@ body {
 #search {
     position: absolute;
     transform: translate(0%, 50%);
-    background-color: rgba(80, 80, 80, 1);
+    background-color: var(--dark-grey);
     border: none;
     padding: 1em;
     border-radius: 1em;
