--- a/css/title.css
+++ b/css/title.css
@@ -10,11 +10,11 @@
     box-sizing: border-box;
     width: 100%;
     height: 25em;
-    border-top: 1em solid rgba(180, 180, 180, 1);
-    border-bottom: 1em solid rgba(180, 180, 180, 1);
-    border-left: 3em solid rgba(180, 180, 180, 1);
-    border-right: 3em solid rgba(180, 180, 180, 1);
-    background-color: rgba(120, 120, 120, 1);
+    border-top: 1em solid var(--light-grey);
+    border-bottom: 1em solid var(--light-grey);
+    border-left: 3em solid var(--light-grey);
+    border-right: 3em solid var(--light-grey);
+    background-color: var(--medium-grey);
 }
 
 #cover {
